[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "unblended"
version = "0.1.0"
description = "Headless Blender as a Python API — persistent process, socket IPC, zero bpy dependency."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
